fix: adjust z-index for fixed table headers and button groups for better layering

--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -24,6 +24,7 @@ tr.odd td.dtfc-fixed-left {
     background-color: #f9f9f9;
 }
 
-th.dtfc-fixed-left, th.dtfc-fixed-right, td.dtfc-fixed-left, td.dtfc-fixed-right {
-    z-index: 3;
+th.dtfc-fixed-left, th.dtfc-fixed-right, td.dtfc-fixed-left, td.dtfc-fixed-right,
+.input-group-prepend .btn, .input-group-append .btn {
+    z-index: 2;
 }
